@@ -1,3 +1,6 @@
+Send the hostname by default unless null, (none) or localhost.
+This can be overridden by using a an empty option for -h (-h '').
+
 dhcpcd-3.0.3
 NIS setup (yp.conf / domainname) works again.
 Send hostname/fqdn in DISCOVER and INFORM messages too.
